# Projekt-EZMR

./: README.md
Beleg/: Abkuerzungsverzeichnis.tex  Literatur.bib  Praeambel.tex  Symbolverzeichnis.tex  Titelseite.aux  Titelseite.tex  master.aux  master.bbl  master.blg  master.dvi  master.lof  master.out.ps  master.tex  master.toc  recommand.aux
Beleg/Abschnitte/: Anhang1.aux  Einleitung.aux  Einleitung.tex  Notizen.tex  Praktikum.aux  Praktikum.tex  Programieraufgaben.aux  Programieraufgaben.tex
Beleg/auxil/: Praeambel.ilg  master.ilg  master.lot
Praktikum/: Makefile  anfrage_client  anfrage_server  anfrage_server.c
Praktikum/2.2/cpp_turtle_controller/: CMakeLists.txt
Praktikum/2.2/cpp_turtle_controller/src/: turtle_square.cpp
Praktikum/2.3/esp32_micro_ros/: main.cpp
Praktikum/2.4/cpp_bumper_react/: CMakeLists.txt  package.xml
Praktikum/2.4/cpp_bumper_react/src/: bumper_react.cpp
Praktikum/2.4/esp32_micro_ros/: main.cpp
Praktikum/2.5/cpp_bumper_react/: CMakeLists.txt  package.xml
Praktikum/2.5/cpp_bumper_react/src/: turtlebot_bumper_react.cpp
Praktikum/cpp_turtle_controller/: package.xml
Praktikum/cpp_turtle_controller/src/: turtle_square.cpp
Programmieraufgaben/2 Sockets_Netcode/a/: Makefile  anfrage_server.c
Programmieraufgaben/2 Sockets_Netcode/b/: anfrage_client.c
Programmieraufgaben/2 Sockets_Netcode/c/: anfrage_server.c
Programmieraufgaben/2 Sockets_Netcode/d/: Makefile  anfrage_peer.c
Programmieraufgaben/3_IPC/: client  client.c  main.c  make.mak  server  server.c
Programmieraufgaben/3_IPC/a/: Makefile  client  client.c  server  server.c
Programmieraufgaben/3_IPC/b/: Makefile  client  client.c  client_interactive  client_interactive.c
Programmieraufgaben/3_IPC/c/: client  client.c  server  server.c
Programmieraufgaben/3_IPC/c(alt)/: 0_server.c
Programmieraufgaben/3_IPC/d/: Makefile  peer.c
