<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">
  <!-- Paketname, Version und Beschreibung -->
  <name>cpp_bumper_react</name>
  <version>0.1.0</version>
  <description>Reagiert auf Bumper-Sensoren und sendet entsprechende Bewegungsbefehle über /cmd_vel</description>
  
  <!-- Verantwortlicher Autor -->
  <maintainer email="toni_volker.schoechert@stud.htwk-leipzig.de">Toni Schoechert</maintainer>
  
  <license>Apache-2.0</license>

  <!-- Build-System -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Notwendige Abhängigkeiten -->
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <!-- Export -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
